# ctc

./: README.md
client/: index.html  redirect.html  script.js
server/: Cargo.toml
server/src/: main.rs
